--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
     <title>Hexlet Frontend Project</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 </head>
 
 <body class="d-flex flex-column min-vh-100">
@@ -12,18 +15,18 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title"></h5>
-                    <button type="button" class="btn-close close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <h5 class="modal-title"></h5><button type="button" class="btn-close close" data-bs-dismiss="modal"
+                        aria-label="Close"></button>
                 </div>
                 <div class="modal-body text-break"></div>
-                <div class="modal-footer">
-                    <a class="btn btn-primary full-article" href="#" role="button" target="_blank"
-                        rel="noopener noreferrer">Читать полностью </a>
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
-                </div>
+                <div class="modal-footer"><a class="btn btn-primary full-article" href="#" role="button" target="_blank"
+                        rel="noopener noreferrer">Читать полностью </a><button type="button" class="btn btn-secondary"
+                        data-bs-dismiss="modal">Закрыть</button></div>
             </div>
         </div>
     </div>
+
+
     <main class="flex-grow-1">
         <section class="container-fluid bg-dark p-5">
             <div class="row">
@@ -65,6 +68,6 @@
         </div>
     </footer>
 </body>
-<script type="module"  src="/index.js"></script>
+<script type="module" src="/index.js"></script>
 
 </html>
